# hovershell

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
docs/: README.md  configuration.md  installation.md  quick-start.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/src/: app.rs  commands.rs  config.rs  error.rs  hotkeys.rs  lib.rs  main.rs  menu.rs  providers.rs  terminal.rs  tray.rs  ui.rs  utils.rs
src-tauri/src/tools/: database_tools.rs  docker_tools.rs  file_ops.rs  git_ops.rs  mod.rs  network_tools.rs  package_manager.rs  system_monitor.rs  text_processor.rs
src-tauri/src/utils/: crypto_utils.rs  file_utils.rs  network_utils.rs  system_utils.rs
src/components/: CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  ThemePreview.tsx  ThemeSelector.tsx
src/hooks/: index.ts  useAsync.ts
src/stores/: appStore.ts  configStore.ts  terminalStore.ts
src/types/: index.ts
src/utils/: index.ts  string.ts
