[package]
name = "hovershell"
version = "0.1.0"
description = "A macOS menu-bar terminal that's always on, edge-activated, fast, AI-aware, and plugin-extensible"
authors = ["Mehmet T. AKALIN <makalin@example.com>"]
license = "MIT"
repository = "https://github.com/makalin/hovershell"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "shell-sidecar", "shell-execute", "shell-open", "window-all", "fs-all", "path-all", "os-all", "process-all", "clipboard-all", "http-all", "global-shortcut", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
config = "0.14"
shellexpand = "3.1"
notify = "6.1"
hotwatch = "0.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.8"
regex = "1.10"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"
once_cell = "1.19"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
yaml-rust = "0.4"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
keyring = "2.3"
native-dialog = "0.6"
screenshots = "0.7"
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
dispatch = "0.2"
libc = "0.2"
mach = "0.3"
security-framework = "2.9"
security-framework-sys = "2.9"
num_cpus = "1.16"
walkdir = "2.4"
sysinfo = "0.29"
serde_yaml = "0.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
